--- a/cis_v400/docs/cis_v400_2_1_1.md
+++ b/cis_v400/docs/cis_v400_2_1_1.md
@@ -28,6 +28,24 @@ By default, Amazon S3 allows both HTTP and HTTPS requests. To achieve only allow
     }
 }
 ```
+or
+```bash
+{
+    "Sid": "<optional>",
+    "Effect": "Deny",
+    "Principal": "*",
+    "Action": "s3:*",
+    "Resource": [
+    "arn:aws:s3:::<bucket_name>",
+    "arn:aws:s3:::<bucket_name>/*"
+    ],
+    "Condition":{
+        "NumericLessThan":{
+            "s3:TlsVersion": "1.2"
+       }
+    }
+}
+```
 
 6. Save.
 7. Repeat for all the buckets in your AWS account that contain sensitive data.
@@ -72,6 +90,25 @@ Using AWS Policy Generator:
     }
 }
 ```
+or
+
+```bash
+{
+    "Sid": "<optional>",
+    "Effect": "Deny",
+    "Principal": "*",
+    "Action": "s3:*",
+    "Resource": [
+    "arn:aws:s3:::<bucket_name>",
+    "arn:aws:s3:::<bucket_name>/*"
+    ],
+    "Condition":{
+        "NumericLessThan":{
+        "s3:TlsVersion": "1.2"
+        }
+    }
+}
+```
 
 3. Apply this modified policy back to the S3 bucket:
 
@@ -81,4 +118,4 @@ aws s3api put-bucket-policy --bucket <bucket_name> --policy file://policy.json
 
 ## Default Value
 
-Both HTTP and HTTPS Request are allowed
+Both HTTP and HTTPS Request are allowed.
