--- a/cis_v400/docs/cis_v400_2_1_4.md
+++ b/cis_v400/docs/cis_v400_2_1_4.md
@@ -43,7 +43,7 @@ If the output reads `true` for the separate configuration settings then it is se
 1. Login to AWS Management Console and open the Amazon S3 console using https://console.aws.amazon.com/s3/.
 2. Choose `Block Public Access (account settings)`.
 3. Choose `Edit` to change the block public access settings for all the buckets in your AWS account.
-4. Choose the settings you want to change, and then choose `Save`. For details about each setting, pause on the `i` icons.
+4. Update the settings and click Save. For details about each setting, pause on the `i` icons.
 5. When you're asked for confirmation, enter `confirm`. Then Click `Confirm` to save your changes.
 
 ### From Command Line:
