--- a/cis_v400/docs/cis_v400_2_2_2.md
+++ b/cis_v400/docs/cis_v400_2_2_2.md
@@ -13,7 +13,7 @@ AWS RDS will occasionally deprecate minor engine versions and provide new ones f
 3. Select the RDS instance that wants to update.
 4. Click on the `Modify` button placed on the top right side.
 5. On the `Modify DB Instance`:`<instance identifier>` page, In the `Maintenance` section, select `Auto minor version upgrade` click on the `Yes` radio button.
-6. At the bottom of the page click on `Continue`, check to Apply Immediately to apply the changes immediately, or select `Apply during the next scheduled maintenance window` to avoid any downtime.
+6. At the bottom of the page click on `Continue`, check to `Apply Immediately` to apply the changes immediately, or select `Apply during the next scheduled maintenance window` to avoid any downtime.
 7. Review the changes and click on `Modify DB Instance`. The instance status should change from available to modifying and back to available. Once the feature is enabled, the `Auto Minor Version Upgrade` status should change to `Yes`.
 
 ### From Command Line:
@@ -25,17 +25,17 @@ aws rds describe-db-instances --region <regionName> --query 'DBInstances[*].DBIn
 ```
 
 2. The command output should return each database instance identifier.
-3. Run the `modify-db-instance` command to modify the selected RDS instance configuration this command will apply the changes immediately, Remove `--apply-immediately` to apply changes during the next scheduled maintenance window and avoid any downtime:
+3. Run the `modify-db-instance` command to modify the configuration of a selected RDS instance. This command will apply the changes immediately. Remove `--apply-immediately` to apply changes during the next scheduled maintenance window and avoid any downtime:
 
 ```bash
 aws rds modify-db-instance --region <regionName> --db-instance-identifier <dbInstanceIdentifier> --auto-minor-version-upgrade --apply-immediately
 ```
 
-4. The command output should reveal the new configuration metadata for the RDS instance and check `AutoMinorVersionUpgrade` parameter value.
-5. Run `describe-db-instances` command to check if the Auto Minor Version Upgrade feature has been successfully enable:
+4. The command output should reveal the new configuration metadata for the RDS instance, including the `AutoMinorVersionUpgrade` parameter value.
+5. Run `describe-db-instances` command to check if the Auto Minor Version Upgrade feature has been successfully enabled::
 
 ```bash
 aws rds describe-db-instances --region <regionName> --db-instance-identifier <dbInstanceIdentifier> --query 'DBInstances[*].AutoMinorVersionUpgrade'
 ```
 
-6. The command output should return the feature current status set to `true`, the feature is `enabled` and the minor engine upgrades will be applied to the selected RDS instance.
+6. The command output should return the feature's current status set to `true`, indicating that the feature is `enabled`, and that the minor engine upgrades will be applied to the selected RDS instance.
