--- a/cis_v400/docs/cis_v400_5_1_1.md
+++ b/cis_v400/docs/cis_v400_5_1_1.md
@@ -13,7 +13,7 @@ Encrypting data at rest reduces the likelihood that it is unintentionally expose
 3. Click `Manage`.
 4. Click the `Enable` checkbox.
 5. Click `Update EBS encryption`
-6. Repeat for every region requiring the change.
+6. Repeat for each region in which EBS volume encryption is not enabled by default.
 
 **Note**: EBS volume encryption is configured per region.
 
@@ -26,6 +26,6 @@ aws --region <region> ec2 enable-ebs-encryption-by-default.
 ```
 
 2. Verify that `EbsEncryptionByDefault`: `true` is displayed.
-3. Repeat every region requiring the change.
+3. Repeat for each region in which EBS volume encryption is not enabled by default.
 
 **Note**: EBS volume encryption is configured per region.
