--- a/cis_v400/docs/cis_v400_5_2.md
+++ b/cis_v400/docs/cis_v400_5_2.md
@@ -1,18 +1,18 @@
 ## Description
 
-The Network Access Control List (NACL) function provide stateless filtering of ingress and egress network traffic to AWS resources. It is recommended that no NACL allows unrestricted ingress access to remote server administration ports, such as SSH to port `22` and RDP to port `3389`, using either the TCP (6), UDP (17) or ALL (-1) protocols.
+The Network Access Control List (NACL) function provides stateless filtering of ingress and egress network traffic to AWS resources. It is recommended that no NACL allows unrestricted ingress access to remote server administration ports, such as SSH on port `22` and RDP on port `3389`, using either the TCP (6), UDP (17), or ALL (-1) protocols.
 
-Public access to remote server administration ports, such as 22 and 3389, increases resource attack surface and unnecessarily raises the risk of resource compromise.
+Public access to remote server administration ports, such as 22 (when used for SSH, not SFTP) and 3389, increases the attack surface of resources and unnecessarily raises the risk of resource compromise.
 
 ## Remediation
 
 ### From Console:
 
-Perform the following:
+Perform the following steps to remediate a network ACL:
 
-1. Log into the AWS Management Console at https://console.aws.amazon.com/vpc/home.
+1. Login to the AWS VPC Console at https://console.aws.amazon.com/vpc/home.
 2. In the left pane, click `Network ACLs`.
-3. For each network ACL to remediate, perform the following:
+3. For each network ACL that needs remediation, perform the following:
     - Select the network ACL.
     - Click the `Inbound Rules` tab.
     - Click `Edit inbound rules`.
