--- a/cis_v400/docs/cis_v400_2_1_3.md
+++ b/cis_v400/docs/cis_v400_2_1_3.md
@@ -22,18 +22,18 @@ Setup a repository for sensitive data discovery results
 2. Make sure `Create bucket` is selected.
 3. Create a bucket, enter a name for the bucket. The name must be unique across all S3 buckets. In addition, the name must start with a lowercase letter or a number.
 4. Click on `Advanced`.
-5. Block all public access, make sure `Yes` is selected.
+5. For block all public access, make sure `Yes` is selected.
 6. KMS encryption, specify the AWS KMS key that you want to use to encrypt the results. The key must be a symmetric, customer master key (CMK) that's in the same Region as the S3 bucket.
 7. Click on `Save`.
 
 Create a job to discover sensitive data
 
 1. In the left pane, click `S3 buckets`. Macie displays a list of all the S3 buckets for your account.
-2. Select the `check box` for each bucket that you want Macie to analyze as part of the job
+2. Check the `check box` for each bucket that you want Macie to analyze as part of the job.
 3. Click `Create job`.
 4. Click `Quick create`.
 5. For the Name and description step, enter a name and, optionally, a description of the job.
-6. Then click `Next`.
+6. Click `Next`.
 7. For the Review and create step, click `Submit`.
 
 Review your findings
