--- a/cis_v400/docs/cis_v400_5.md
+++ b/cis_v400/docs/cis_v400_5.md
@@ -1,3 +1,3 @@
 ## Overview
 
-This section contains recommendations for configuring security-related aspects of AWS Virtual Private Cloud (VPC).
+This section contains recommendations for AWS networking configuration.
