--- a/cis_v400/docs/cis_v400_5_7.md
+++ b/cis_v400/docs/cis_v400_5_7.md
@@ -2,6 +2,10 @@
 
 When enabling the Metadata Service on AWS EC2 instances, users have the option of using either Instance Metadata Service Version 1 (IMDSv1; a request/response method) or Instance Metadata Service Version 2 (IMDSv2; a session-oriented method).
 
+Instance metadata is data about your instance that you can use to configure or manage the running instance. Instance metadata is divided into [categories](https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/ec2-instance-metadata.html), such as host name, events, and security groups.
+
+When enabling the Metadata Service on AWS EC2 instances, users have the option of using either Instance Metadata Service Version 1 (IMDSv1; a request/response method) or Instance Metadata Service Version 2 (IMDSv2; a session-oriented method). With IMDSv2, every request is now protected by session authentication. A session begins and ends a series of requests that software running on an EC2 instance uses to access the locally stored EC2 instance metadata and credentials.
+
 Allowing Version 1 of the service may open EC2 instances to Server-Side Request Forgery (SSRF) attacks, so Amazon recommends utilizing Version 2 for better instance security.
 
 ## Remediation
@@ -12,23 +16,24 @@ Allowing Version 1 of the service may open EC2 instances to Server-Side Request 
 2. In the left navigation panel, under the `INSTANCES` section, choose `Instances`.
 3. Select the EC2 instance that you want to examine.
 4. Choose `Actions > Instance Settings > Modify instance metadata options`.
-5. Ensure `Instance metadata service` is set to `Enable` and set `IMDSv2` to `Required`.
-6. Repeat steps no. 1 – 5 to perform the remediation process for other EC2 
-Instances in the all applicable AWS region(s).
+5. Set `Instance metadata service `to `Enable`.
+6. Set `IMDSv2` to `Required`.
+7. Repeat steps 1-6 to perform the remediation process for other EC2 instances in all applicable AWS region(s).
+
 ### From Command Line:
 
-1. Run the `describe-instances` command using appropriate filtering to list the IDs of all the existing EC2 instances currently available in the selected region:
+1. Run the `describe-instances` command, applying the appropriate filters to list the IDs of all existing EC2 instances currently available in the selected region:
 
 ```bash
 aws ec2 describe-instances --region <region-name> --output table --query "Reservations[*].Instances[*].InstanceId"
 ```
 
 2. The command output should return a table with the requested instance IDs.
-3. Now run the `modify-instance-metadata-options` command using an instance ID returned at the previous step to update the Instance Metadata Version:
+3. Run the` modify-instance-metadata-options` command with an instance ID obtained from the previous step to update the Instance Metadata Version:
 
 ```bash
-aws ec2 modify-instance-metadata-options --instance-id <instance-id> --http-tokens required --region <region-name>
+aws ec2 modify-instance-metadata-options --instance-id <instance-id> -- http-tokens required --region <region-name>
 ```
 
-4. Repeat steps no. 1 – 3 to perform the remediation process for other EC2 Instances in the same AWS region.
-5. Change the region by updating `--region` and repeat the entire process for other regions.
+4. Repeat steps 1-3 to perform the remediation process for other EC2 instances in the same AWS region.
+5. Change the region by updating `--region` and repeat the process for other regions.
